src/app/components/LateralTab/LateralTab.module.css
.container {
  gap: .5rem;
  padding: 0;
  flex-grow: 1;
  min-height: 0;
  padding-inline: .3rem;
  flex-direction: column;
  display: flex;
  align-items: center;
}

.iconContainer {
  width: 100%;
  display: flex;
  justify-content: center;
}

.iconContainer img {
  cursor: pointer;
}

.projects {
  padding: 0;
  padding-block: .5rem;
  flex-grow: 1;
  min-height: 0;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  align-items: center;
}

.versionContainer {
  width: 100%;
}

.version {
  color: var(--color-text-secondary);
  font-weight: 600;
  border: solid 1px var(--color-text-secondary);
  border-radius: 30px;
  width: 100%;
  font-size: 11px;
  display: flex;
  justify-content: center;
}

.user {
  gap: .3rem;
  padding: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.user li {
  width: 100%;
  min-height: 2.5rem;
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  padding-inline: .3rem;
  box-sizing: border-box;
}

.archive {
  cursor: pointer;
  transition-duration: .4s;
}

.archive:hover {
  color: var(--color-text-bright);
}

.menuToggleActive {
  color: var(--color-accent);
}

